# lines-with-links

./: README.md
frontend/: favicon.ai  package-lock.json  package.json  tailwind.config.cjs
frontend/src/lib/: chessUtils.ts  chessboard.css  chessboard.svelte  stores.ts  utils.ts  videoListItem.svelte
frontend/src/lib/server/: database.ts
frontend/src/lib/types/: positionSightingMetadata.ts  videoMetadata.ts  videoPositions.ts
frontend/src/lib/ui/: chessboard.css  chessboard.svelte  searchButton.svelte  videoList.svelte  videoListItem.svelte  videoTimestampBar.svelte
frontend/src/routes/: +page.svelte  +page.ts
frontend/src/routes/[...fen]/: +page.server.ts  +page.svelte
frontend/src/routes/vids/: +server.ts
video-processing/: chessboard_locating_algo.ipynb  main.py  playlist_to_videos.py  profile.sh  pyproject.toml
video-processing/tests/: test_data_loading.py  test_db.py  test_performance.py  test_position_extraction.py
video-processing/video_processing/: chessboard_finding.ipynb  data_loading.py  db.py  main.py  position_extraction.py  video_analysis.py  video_processing_task.py
video-processing/video_processing/tensorflow/: chessboard_finder.py  frame_analyzer.py  helper_functions.py  helper_image_loading.py  readme.md  tensorflow_chessbot.py
video-processing/video_processing/tensorflow/saved_models/web_model/: weights_manifest.json
