[tool.poetry]
name = "video-processing"
version = "0.1.0"
description = ""
authors = ["skyler arnold <skyarnold1@me.com>"]
readme = "README.md"
packages = [{include = "video_processing"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
scipy = "^1.9.3"
numpy = "^1.24.0"
pillow = "^9.3.0"
tensorflow = "^2.11.0"
pytube = "^12.1.2"
opencv-python = "^4.6.0.66"
typer = "^0.7.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.45"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-video = "video_processing.main:app"

[pytest]
log_level = "INFO"

